--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -13,7 +13,6 @@ menuitem "Editing"        			"showmenu editing"
 menuitem "About/Credits/Help"       "showmenu about"
 menuitem "Quit"						"quit"
 
-menubg	 "textures/makke/menu.jpg"
 // menumdl path frame range rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
 
@@ -34,17 +33,14 @@ alias genmapitems [
 ]
 
 newmenu maps
-menubg	 "textures/makke/menu.jpg"
 
 genmapitems "ac_complex ac_mines ac_depot ac_desert"
 
 newmenu maps_ctf 
-menubg	 "textures/makke/menu.jpg"
 
 genmapitems "ac_mines ac_depot"
 
 newmenu setup
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Select Team"           "showmenu team"
 menuitem "Select Skins"           "showmenu skins"
@@ -52,43 +48,38 @@ menuitem "Select Weapon"         "showmenu weapons"
 menuitem "Set Name"              "saycommand /name"
 
 newmenu skins
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "CLA Skins"              "showmenu cla"
 menuitem "RVSF Skins"             "showmenu rvsf"
 
 newmenu "cla"
-menubg	 "textures/makke/menu.jpg"
 
-menumdl playermodels/terrorist/01 0 197 50 5
-menuitem "Comandante"		"skin 0" "chmenumdl cla playermodels/terrorist/01 0 197 50 5"
-menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/terrorist/02 0 197 50 5"
-menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/terrorist/03 0 197 50 5"
-menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/04 0 197 50 5"
+menumdl playermodels/terrorist/01/menu 0 197 50 5
+menuitem "Comandante"		"skin 0" "chmenumdl cla playermodels/terrorist/01/menu 0 197 50 5"
+menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/terrorist/02/menu 0 197 50 5"
+menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/terrorist/03/menu 0 197 50 5"
+menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/04/menu 0 197 50 5"
 
 
 newmenu "rvsf"
-menubg	 "textures/makke/menu.jpg"
 
-menumdl playermodels/counterterrorist/01 0 197 50 5
-menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01 0 197 50 5"
-menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrorist/02 0 197 50 5"
-menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03 0 197 50 5"
-menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04 0 197 50 5"
-menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05 0 197 50 5"
-menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06 0 197 50 5"
+menumdl playermodels/counterterrorist/01/menu 0 197 50 5
+menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01/menu 0 197 50 5"
+menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrorist/02/menu 0 197 50 5"
+menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03/menu 0 197 50 5"
+menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04/menu 0 197 50 5"
+menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05/menu 0 197 50 5"
+menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06/menu 0 197 50 5"
 
 
 newmenu team
-menubg	 "textures/makke/menu.jpg"
 
-menumdl playermodels/terrorist/01 0 197 50 5
-menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01 0 197 50 5"
-menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03 0 197 50 5"
+menumdl playermodels/terrorist/01/menu 0 197 50 5
+menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01/menu 0 197 50 5"
+menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03/menu 0 197 50 5"
 
 
 newmenu multiplayer
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Join Game"              	"servermenu"
 menuitem "Update Servers"         	"updatefrommaster"
@@ -97,7 +88,6 @@ menuitem "Disconnect"             	"disconnect"
 
 
 newmenu gamemode
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Team Deathmatch"			"mode 0; showmenu maps"
 menuitem "Team Survivor"			"mode 4; showmenu maps"
@@ -126,13 +116,11 @@ alias startbotmap [
 ]
 
 newmenu bots
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Start Botmatch"				"showmenu botskill"
 
 
 newmenu botskill
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "best" "alias tmp_botskill best; showmenu enemies"
 menuitem "good (default)" "alias tmp_botskill good; showmenu enemies"
@@ -142,7 +130,6 @@ menuitem "bad" "alias tmp_botskill bad; showmenu enemies"
 
 
 newmenu enemies
-menubg	 "textures/makke/menu.jpg"
 
 alias genenemyitems [
 	alias n (listlen $arg1)
@@ -164,7 +151,6 @@ genenemyitems "1 2 4 8 16 32"
 
 
 newmenu botmaps
-menubg	 "textures/makke/menu.jpg"
 
 alias genbotmaps [
 	alias n (listlen $arg1)
@@ -182,7 +168,6 @@ genbotmaps "ac_complex ac_mines ac_depot ac_desert"
 
 
 newmenu editing
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Mapmodels..."				"showmenu mapmodels"
 menuitem "Entities"			        "showmenu entities"
@@ -193,7 +178,6 @@ menuitem "help..."                              "showmenu editkeys"
 
 
 newmenu editkeys
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "toggle edit mode (key E)"                         "edittoggle"
 menuitem "undo last edit action (key U)"                    "undo"
@@ -209,7 +193,6 @@ menuitem "more..."                                          "showmenu more"
 
 
 newmenu more
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "insert/home/pgup/keyp7 browse through floor/wall/ceiling/" ""
 menuitem "      upper textures on your current selection,"           ""
@@ -224,7 +207,6 @@ menuitem "8/9 change the offset of a vertex in a heightfield"        ""
 
 
 newmenu mapmodels
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "misc"       "showmenu misc"
 menuitem "ladders"    "showmenu ladders" 
@@ -238,14 +220,12 @@ menuitem "other"      "showmenu other"
 
 
 newmenu misc
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Nothing (clip)"       "newent mapmodel 0"
 menuitem "Bridge(8x8)"        	"newent mapmodel 1"
 
 
 newmenu ladders
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Ladder(7)"             "newent mapmodel 2"             
 menuitem "Ladder(8)"             "newent mapmodel 3"
@@ -255,7 +235,6 @@ menuitem "Ladder(15)"            "newent mapmodel 6"
 
 
 newmenu street
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Streetlight"    	"newent mapmodel 7"
 menuitem "Bench"        	"newent mapmodel 9"
@@ -268,7 +247,6 @@ menuitem "Fencegate"            "newent mapmodel 15"
 menuitem "Fencedoor"            "newent mapmodel 16"
 
 newmenu plants
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Grass1"     		"newent mapmodel 17"
 menuitem "Grass1_dry"           "newent mapmodel 18"
@@ -282,22 +260,20 @@ menuitem "Plant1_snow"          "newent mapmodel 25"
 menuitem "Tree"     		"newent mapmodel 26"
 
 newmenu interior
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Chair" 	        "newent mapmodel 27"
 menuitem "Laptop"     		"newent mapmodel 28"
 menuitem "Picture1"      	"newent mapmodel 29"
 menuitem "Locker"     		"newent mapmodel 30"
 
+
 newmenu lights
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Strahler"    		"newent mapmodel 31"
 menuitem "Light1"    		"newent mapmodel 32"
 menuitem "Bulb"    		"newent mapmodel 33"
 
 newmenu industrial
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Barrel"          	"newent mapmodel 34"
 menuitem "Knocked Over Barrel"  "newent mapmodel 35"
@@ -311,7 +287,6 @@ menuitem "Screw"     		"newent mapmodel 42"
 menuitem "Hook"     		"newent mapmodel 52"
 
 newmenu signs
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Flammable Sign"       "newent mapmodel 43"
 menuitem "Speed Limit Sign"     "newent mapmodel 44"
@@ -320,7 +295,6 @@ menuitem "Caution Sign"         "newent mapmodel 46"
 menuitem "Biohazard Sign"       "newent mapmodel 47"
 
 newmenu other
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Cigarette"     	"newent mapmodel 48"
 menuitem "Can" 			"newent mapmodel 49"
@@ -331,7 +305,6 @@ menuitem "Flyer"                "newent mapmodel 54"
 menuitem "Poster"               "newent mapmodel 55"
 
 newmenu entities
-menubg	 "textures/makke/menu.jpg"
 
 menuitem spawn_RVSF              "newent playerstart 1"
 menuitem spawn_CLA               "newent playerstart 0"
@@ -341,7 +314,6 @@ menuitem flag_CLA                "newent ctf-flag 0"
 menuitem ladder                  "newent ladder"
 
 newmenu pickups
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Health"                "newent health"
 menuitem "Pistol Ammo"           "newent clips"
@@ -350,7 +322,6 @@ menuitem "Kevlar Vest"           "newent armour"
 menuitem "Akimbo"                "newent akimbo"
 
 newmenu arches
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "normal arch"                        "heightfield 2; arch 0"
 menuitem "arch with sideways curve (delta 1)" "heightfield 2; arch 1"
@@ -370,7 +341,6 @@ menuitem "[ arches make ceiling heighfield, slopes floor ]"
 
 
 newmenu mapop
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Newmap 128x128 cubes (recommended)" "newmap 7"
 menuitem "Newmap 256x256 cubes"               "newmap 8"
@@ -387,13 +357,13 @@ bind B "showmenu weapons"
 //menuitem "Equipment"	        "showmenu equipment"
 
 newmenu "weapons"
-menubg	 "textures/makke/menu.jpg"
 
-menumdl weapons/assault/menu 0 1 75 12
-menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu 0 1 75 12"
-menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu 0 1 75 12"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu 0 1 75 12"
-menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu 0 1 75 12"
+menumdl weapons/assault/world 0 1 75 5
+menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu 0 1 75 5"
+menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu 0 1 75 5"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu 0 1 75 5"
+menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu 0 1 75 5
+"
 
 //newmenu "secondary"
 //menumdl vwep/semipistol 0 1 40 60
@@ -405,7 +375,6 @@ menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmen
 //menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl equipment pickups/kevlar 0 1 40 20"
 
 newmenu options
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "tweak minlod.. (higher = less popup, possibly lower fps)" "showmenu minlod"
 menuitem "tweak fpsrange.. (higher = possibly more popup)"          "showmenu fpsrange"
@@ -414,7 +383,6 @@ menuitem "turn dynamic light/shadows off"                           "dynlight 0"
 menuitem "tweak gamma.."                                            "showmenu gamma"
 
 newmenu gamma
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "gamma 50"
 menuitem "gamma 60"
@@ -429,7 +397,6 @@ menuitem "gamma 140"
 menuitem "gamma 150"
 
 newmenu minlod
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "minimum (25)"        "minlod 25"
 menuitem "decent (60)"         "minlod 60"
@@ -437,7 +404,6 @@ menuitem "good (100)"          "minlod 100"
 menuitem "fps be damned (250)" "minlod 250"
 
 newmenu fpsrange
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "my 486 0wnz y00 (8-10)"        "fpsrange 8 10"
 menuitem "slow machine (20-25)"          "fpsrange 20 25"
@@ -446,7 +412,6 @@ menuitem "fps whore (60-60)"             "fpsrange 60 60"
 menuitem "I don't understand LOD (100+)" "fpsrange 100 1000"
 
 newmenu watersubdiv
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "subdivision 1  (insane polygon wastage)"  "watersubdiv 1"
 menuitem "subdivision 2  (high quality)"            "watersubdiv 2"
@@ -456,7 +421,6 @@ menuitem "subdivision 16 (my 486 can do water too)" "watersubdiv 16"
 
 
 newmenu about
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "ActionCube v.0.9" ""
 menuitem ""
@@ -474,7 +438,6 @@ menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)
 
 
 newmenu help
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "r                        - reload Gun" ""
 menuitem "right mouse button     - use scope" ""
@@ -485,7 +448,6 @@ menuitem "" ""
 menuitem "-for further information read readme.html-"
 
 newmenu credits
-menubg	 "textures/makke/menu.jpg"
 
 menuitem "Arghvark    Project Leader" ""
 menuitem "              Concept, Coding" ""
