--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -358,12 +358,12 @@ bind B "showmenu weapons"
 
 newmenu "weapons"
 
-menumdl weapons/assault/world 0 1 75 5
-menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu 0 1 75 5"
-menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu 0 1 75 5"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu 0 1 75 5"
-menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu 0 1 75 5
-"
+menumdl weapons/assault/menu 0 1 75 12
+menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu 0 1 75 12"
+menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu 0 1 75 12"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu 0 1 75 12"
+menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu 0 1 75 12"
+
 
 //newmenu "secondary"
 //menumdl vwep/semipistol 0 1 40 60
