*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@353 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -1,6 +1,6 @@
 CXX=g++
 CXXOPTFLAGS=-Wall -O3 -fsigned-char -fomit-frame-pointer -fpermissive
-CXXFLAGS=$(CXXOPTFLAGS) -I../enet/include `sdl-config --cflags`
+CXXFLAGS=$(CXXOPTFLAGS) -I../enet/include `sdl-config --cflags` -Wno-deprecated
 
 CLIENT_LIBS=-L../enet -lenet `sdl-config --libs` -lSDL_image -lSDL_mixer -lz -lGL -lGLU 
 CLIENT_OBJS= \
@@ -35,14 +35,22 @@ CLIENT_OBJS= \
 	worldio.o \
 	worldlight.o \
 	worldocull.o \
-	worldrender.o
+	worldrender.o \
+   bot/bot.o \
+   bot/botmanager.o \
+   bot/bot_ai.o \
+   bot/bot_util.o \
+   bot/bot_waypoint.o \
+   bot/ac_bot.o \
+   bot/ac_bot_ai.o 
+
 
 SERVER_LIBS=-L../enet -lenet
-SERVER_OBJS= \
-	standalone.o \
-	serverms.o \
-	server.o \
-	tools.o
+SERVER_FILES= \
+	serverms.cpp \
+	server.cpp \
+	serverutil.cpp \
+	tools.cpp
 
 default: all
 
@@ -53,14 +61,11 @@ enet:
 
 clean:
 	-rm -f $(SERVER_OBJS) $(CLIENT_OBJS) ../../bin/ac_server ../../bin/ac_client
-	-make -C ../enet/ clean
-
-standalone.o:
-	$(CXX) $(CXXFLAGS) -DSTANDALONE -o standalone.o -c serverutil.cpp
+#	-make -C ../enet/ clean
 
 client: $(CLIENT_OBJS)
 	$(CXX) $(CXXFLAGS) -o ../../bin/ac_client $(CLIENT_OBJS) $(CLIENT_LIBS)
 
-server: $(SERVER_OBJS)
-	$(CXX) $(CXXFLAGS) -o ../../bin/ac_server $(SERVER_OBJS) $(SERVER_LIBS)  
+server: $(SERVER_FILES)
+	$(CXX) $(CXXFLAGS) -o ../../bin/ac_server -DSTANDALONE $(SERVER_FILES) $(SERVER_LIBS)
 	
