--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -5,13 +5,14 @@ bind ESCAPE "showmenu main"    // it all starts here
 newmenu main
 
 menuitem "Multiplayer"  	        "showmenu multiplayer"
-menuitem "Bots"						"showmenu bots"
+menuitem "Singleplayer"				"showmenu singleplayer"
 menuitem "Team/Player Setup"		"showmenu setup"
 menuitem "Load Map"					"showmenu maps"
 menuitem "Options"                  "showmenu options"
 menuitem "Editing"        			"showmenu editing"
 menuitem "About/Credits/Help"       "showmenu about"
 menuitem "Quit"						"quit"
+
 
 // menumdl path frame range rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
@@ -43,7 +44,7 @@ genmapitems "ac_mines ac_depot"
 newmenu setup
 
 menuitem "Select Team"           "showmenu team"
-menuitem "Select Skins"           "showmenu skins"
+menuitem "Select Skins"          "showmenu skins"
 menuitem "Select Weapon"         "showmenu weapons"  
 menuitem "Set Name"              "saycommand /name"
 
@@ -100,33 +101,36 @@ menuitem "Deathmatch Arena (LMS)"	"mode 3; showmenu maps"
 
 alias tmp_botskill good
 alias tmp_numbots 1
+alias tmp_mode
 alias tmp_botmap
 
 alias startbotmatch [
 	kickallbots
-	addnbot $tmp_numbots RVSF $tmp_botskill
+	addnbot (div $tmp_numbots 2) RVSF $tmp_botskill
+	addnbot (div $tmp_numbots 2) CLA $tmp_botskill
 ]
 
 alias startbotmap [
 	disconnect
-	mode 7
 	echo starting botmatch..
 	sleep 5000 startbotmatch
+	mode $tmp_mode
 	map $tmp_botmap
 ]
 
-newmenu bots
+newmenu singleplayer
 
-menuitem "Start Botmatch"				"showmenu botskill"
-
+menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
+menuitem "Bot Deathmatch"					"alias tmp_mode 8; showmenu botskill"
 
 newmenu botskill
 
-menuitem "best" "alias tmp_botskill best; showmenu enemies"
-menuitem "good (default)" "alias tmp_botskill good; showmenu enemies"
-menuitem "medium" "alias tmp_botskill medium; showmenu enemies"
-menuitem "worse" "alias tmp_botskill worse; showmenu enemies"
-menuitem "bad" "alias tmp_botskill bad; showmenu enemies"
+alias showmenu_enemies [ if (= $tmp_mode 8) [ showmenu enemies ] [ showmenu "team enemies" ] ]
+menuitem "best" "alias tmp_botskill best; showmenu_enemies"
+menuitem "good (default)" "alias tmp_botskill good; showmenu_enemies"
+menuitem "medium" "alias tmp_botskill medium; showmenu_enemies"
+menuitem "worse" "alias tmp_botskill worse; showmenu_enemies"
+menuitem "bad" "alias tmp_botskill bad; showmenu_enemies"
 
 
 newmenu enemies
@@ -135,19 +139,30 @@ alias genenemyitems [
 	alias n (listlen $arg1)
 	loop $n [
 		at $arg1 $i
-		alias numenemies $s
-		if (= $numenemies 1) [
-			concat $numenemies enemy
+		alias numplayers $s
+		if (= $arg2 0) [
+			alias $numenemies (- $numplayers 1) // don't count yourself as enemy
+			if (= $numenemies 1) [
+				concat $numenemies enemy
+			] [
+				concat $numenemies enemies
+			]
 		] [
-			concat $numenemies enemies
+			alias teamsize (div $numplayers 2)
+			concatword $teamsize on $teamsize
 		]
 		alias menutext $s		
-		concat "alias tmp_numbots" $numenemies "; showmenu botmaps"
+		concat "alias tmp_numbots" $numplayers "; showmenu botmaps"
 		menuitem $menutext $s
 	]
 ]
 
-genenemyitems "1 2 4 8 16 32"
+genenemyitems "2 3 5 9 17 33" 0
+
+
+newmenu "team enemies"
+
+genenemyitems "2 4 6 8 16 32" 1
 
 
 newmenu botmaps
