--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -140,14 +140,14 @@ alias genenemyitems [
 	loop $n [
 		at $arg1 $i
 		alias numplayers $s
-		if (= $arg2 0) [
-			alias $numenemies (- $numplayers 1) // don't count yourself as enemy
+		if (= $arg2 0) [ // DM
+			alias numenemies (- $numplayers 1) // don't count yourself as enemy
 			if (= $numenemies 1) [
 				concat $numenemies enemy
 			] [
 				concat $numenemies enemies
 			]
-		] [
+		] [ // TDM
 			alias teamsize (div $numplayers 2)
 			concatword $teamsize on $teamsize
 		]
