--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -1,8 +1,6 @@
 // put all your personal settings in this file,
 // and all your keybindings that are different from the default (see keymap.cfg)
 
-bind u "connect 67.165.80.200"
-
 name "unarmed"     // change!
 team "cuber"
 
@@ -82,7 +80,9 @@ bind 3 melee
 bind 4 grenade
 
 bind R reload
-bind MOUSE2 [ altattack ]
+// bind MOUSE2 [ altattack ]
+bind MOUSE2 [ altattack; onrelease [ altattack ] ] // click and hold = Scope ON, release button = Scope OFF
+
 
 alias delta_edit_0 [ editheight $flrceil $arg1 ]
 alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
@@ -92,12 +92,5 @@ alias delta_edit_4 [ equalize $flrceil ]
 alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
 
 alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
-
-if (only_menu_music) [ musicvol 1; music $menu_music ]
-
-// change
-hudgun 1
-
-
 
 
