waypoints, def-map-fix
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@380 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -125,7 +125,7 @@ texture 0 "./makke/bricky.jpg"
 texture 0 "./makke/01-CMU.jpg"
 texture 0 "./makke/mauer1.jpg"
 texture 0 "./makke/mauer2.jpg"
-texture 0 "./d_brick.jpg"
+texture 0 "./makke/d_brick.jpg"
 texture 0 "./mitaman/3dcafe/stone18.jpg"
 
 //---- tiles --------
