spawndelay drinn, botkick on mapstart drinn, akimbo msg draussen..
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@382 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -10,10 +10,7 @@ sensitivityscale 10
 
 fov 100
 
-alias only_menu_music 1
-alias menu_music ac.ogg
-
-musicvol 0 // set higher if you want (max 255)
+alias maxmusicvol 120 // set higher if you want (max 255)
 soundvol 150
 
 fpsrange 30 40     // *don't modify* unless you understand it fully
@@ -83,7 +80,6 @@ bind R reload
 // bind MOUSE2 [ altattack ]
 bind MOUSE2 [ altattack; onrelease [ altattack ] ] // click and hold = Scope ON, release button = Scope OFF
 
-
 alias delta_edit_0 [ editheight $flrceil $arg1 ]
 alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
 alias delta_edit_2 [ edittex $flrceil $arg1 ]
@@ -94,3 +90,25 @@ alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
 alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
 
 
+
+music ac.ogg
+musicvol $maxmusicvol
+
+alias fade [ // 0=in, 1=out
+	alias stepsize 5
+	alias numsteps (div $maxmusicvol $stepsize)
+	loop (+ $numsteps 1) [
+		alias curvol (* $i $stepsize)
+		if (= $arg1 1) [ alias curvol (- $maxmusicvol $curvol) ]
+		concat musicvol ($curvol)
+		sleep (* $i 100) $s
+	]
+]
+
+alias start_intermission [
+	fade 0
+	sleep 10000 [ fade 1 ]
+]
+
+// play once (1:40)
+sleep 100000 [ fade 1 ]
