--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -91,10 +91,12 @@ menuitem "Disconnect"             	"disconnect"
 newmenu gamemode
 
 menuitem "Team Deathmatch"			"mode 0; showmenu maps"
-menuitem "Team Survivor"			"mode 4; showmenu maps"
-menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
 menuitem "Deathmatch"        		"mode 2; showmenu maps"
-menuitem "Deathmatch Arena (LMS)"	"mode 3; showmenu maps"
+menuitem "Team Survivor"			"mode 4; showmenu maps"
+menuitem "Survivor"					"mode 3; showmenu maps"
+menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
+menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
+
 
 
 // bot menus and tools
@@ -159,10 +161,9 @@ alias genenemyitems [
 
 genenemyitems "2 3 5 9 17 33" 0
 
-
-newmenu "team enemies"
-
-genenemyitems "2 4 6 8 16 32" 1
+// teamplay note mature yet
+//newmenu "team enemies"
+//genenemyitems "2 4 6 8 16 32" 1
 
 
 newmenu botmaps
