--- a/ac/config/servers.cfg
+++ b/ac/config/servers.cfg
@@ -1,3 +1,6 @@
 // servers connected to are added here automatically
 
+addserver 84.227.72.17
+addserver 84.227.72.17
+addserver 84.226.155.46
 addserver localhost
