--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -122,7 +122,7 @@ alias startbotmap [
 
 newmenu singleplayer
 
-menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
+//menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
 menuitem "Bot Deathmatch"					"alias tmp_mode 8; showmenu botskill"
 
 newmenu botskill
