--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -94,8 +94,9 @@ menuitem "Team Deathmatch"			"mode 0; showmenu maps"
 menuitem "Deathmatch"        		"mode 2; showmenu maps"
 menuitem "Team Survivor"			"mode 4; showmenu maps"
 menuitem "Survivor"					"mode 3; showmenu maps"
-menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
 menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
+menuitem "Pistol only"				"mode 6; showmenu maps"
+menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
 
 
 
@@ -122,6 +123,7 @@ alias startbotmap [
 
 newmenu singleplayer
 
+// teamplay note mature yet
 //menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
 menuitem "Bot Deathmatch"					"alias tmp_mode 8; showmenu botskill"
 
@@ -161,9 +163,8 @@ alias genenemyitems [
 
 genenemyitems "2 3 5 9 17 33" 0
 
-// teamplay note mature yet
-//newmenu "team enemies"
-//genenemyitems "2 4 6 8 16 32" 1
+newmenu "team enemies"
+genenemyitems "2 4 6 8 16 32" 1
 
 
 newmenu botmaps
