--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -95,7 +95,7 @@ menuitem "Deathmatch"        		"mode 2; showmenu maps"
 menuitem "Team Survivor"			"mode 4; showmenu maps"
 menuitem "Survivor"					"mode 3; showmenu maps"
 menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
-menuitem "Pistol only"				"mode 6; showmenu maps"
+menuitem "Pistol Frenzy"				"mode 6; showmenu maps"
 menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
 
 
