--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -75,23 +75,14 @@ bind 4 grenade
 bind R reload
 
 
-//bind MOUSE2 [ altattack ]
-bind mouse2 [ altattack;onrelease [ altattack ] ] 
+bind mouse2 [ altattack ] 
 
-=======
->>>>>>> 1.15
 alias delta_edit_0 [ editheight $flrceil $arg1 ]
 alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
 alias delta_edit_2 [ edittex $flrceil $arg1 ]
 alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
 alias delta_edit_4 [ equalize $flrceil ]
 alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
-
-alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
-
-
-
-if (only_menu_music) [ musicvol 1; music $menu_music ]
 
 // change
 hudgun 1
@@ -110,9 +101,6 @@ alias dm    [ mode 2; map $arg1 ]
 alias ffa   [ mode 2; map $arg1 ]
 alias lms   [ mode 3; map $arg1 ]
 
-
-
-=======
 
 music ac.ogg
 musicvol $maxmusicvol
@@ -134,4 +122,4 @@ alias start_intermission [
 ]
 
 // play once (1:40)
-sleep 100000 [ fade 1 ]>>>>>>> 1.15
+sleep 100000 [ fade 1 ]
