--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -77,6 +77,7 @@ bind R reload
 
 bind mouse2 [ altattack ] 
 
+
 alias delta_edit_0 [ editheight $flrceil $arg1 ]
 alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
 alias delta_edit_2 [ edittex $flrceil $arg1 ]
@@ -84,8 +85,10 @@ alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
 alias delta_edit_4 [ equalize $flrceil ]
 alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
 
-// change
-hudgun 1
+
+alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
+
+
 
 alias delta_game_0 [ if (= $arg1 1) [ primary ] [ secondary ] ]
 bind lshift "grenade"
@@ -100,6 +103,8 @@ alias ctf   [ mode 5; map $arg1 ]
 alias dm    [ mode 2; map $arg1 ]
 alias ffa   [ mode 2; map $arg1 ]
 alias lms   [ mode 3; map $arg1 ]
+alias pf    [ mode 6; map $arg1 ]
+alias lss   [ mode 9; map $arg1 ]
 
 
 music ac.ogg
