--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -110,6 +110,7 @@ alias tmp_botmap
 alias startbotmatch [
 	kickallbots
 	addnbot (div $tmp_numbots 2) RVSF $tmp_botskill
+	if ((> (mod $tmp_numbots 2) 0)) [ alias tmp_numbots (+ $tmp_numbots 1) ] []
 	addnbot (div $tmp_numbots 2) CLA $tmp_botskill
 ]
 
@@ -137,19 +138,17 @@ menuitem "worse" "alias tmp_botskill worse; showmenu_enemies"
 menuitem "bad" "alias tmp_botskill bad; showmenu_enemies"
 
 
-newmenu enemies
-
 alias genenemyitems [
 	alias n (listlen $arg1)
 	loop $n [
 		at $arg1 $i
 		alias numplayers $s
 		if (= $arg2 0) [ // DM
-			alias numenemies (- $numplayers 1) // don't count yourself as enemy
-			if (= $numenemies 1) [
-				concat $numenemies enemy
+			alias numplayers (- $numplayers 1) // don't count yourself as enemy
+			if (= $numplayers 1) [
+				concat $numplayers enemy
 			] [
-				concat $numenemies enemies
+				concat $numplayers enemies
 			]
 		] [ // TDM
 			alias teamsize (div $numplayers 2)
@@ -161,6 +160,7 @@ alias genenemyitems [
 	]
 ]
 
+newmenu enemies
 genenemyitems "2 3 5 9 17 33" 0
 
 newmenu "team enemies"
