--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -90,7 +90,7 @@ loadsky "textures/skymaps/steini/steini4"
 
 texturereset    // starts the texture slot/index at 0
 
-texture 0 "kurt/klite1.jpg" //damn dummy
+texture 0 "kurt/klite1.jpg" //dummy
 
 //-------------water-uncomment all but one!------
 
